--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -56,7 +56,7 @@ button{
     text-transform: uppercase;
     font-weight: 500 ;  
 }
-#lilSpan{
+#spaceSpan{
     width: 30px;
     font-family: "Montserrat","Avenir"; 
     display: inline-block;
