--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -114,6 +114,23 @@ button:hover a {
 	font-size: 1.3em;
 }
 
+footer {
+	text-align: center;
+	width: 100%;
+	padding-bottom: 10px;
+	/* position: absolute;
+	bottom: 10px; */
+}
+
+.footer-title{
+	margin-bottom: 10px;
+}
+
+.social-img{
+	height: 50px;
+	margin: 3px;
+}
+
 @media all and (max-width: 720px) {
 	h1{
 		font-size: 1em;
@@ -129,5 +146,14 @@ button:hover a {
 
 	#messageDisplay {
 		width: auto;
+	}
+	.footer-title{
+		font-size: 0.9rem;
+		margin-bottom: 5px;
+	}
+
+	.social-img{
+		height: 35px;
+		margin-bottom: 10px;
 	}
 }
